--- a/sources/release-notes-1-1/sections/clause-6-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-6-critical.adoc
@@ -1,4 +1,4 @@
 [[Clause_Critical]]
-== Description of substantive changes
+== Description of Critical changes
 
 There are no critical changes in this revision of the ModSpec.
