--- a/sources/mod-spec-user-guide/sections/00-preface.adoc
+++ b/sources/mod-spec-user-guide/sections/00-preface.adoc
@@ -2,7 +2,7 @@
 [.preface]
 
 == Preface
-This document is an informative user guide for undrstanding and implementing the requirements defined in the OGC ModSpec - A Standard for Designing and Writing Modular Standards
+This document is an informative user guide for understanding and implementing the requirements defined in the OGC ModSpec - A Standard for Designing and Writing Modular Standards
 
 The ModSpec is an OGC member developed and approved document that defines a model and related requirements 
 and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable 
