--- a/sources/mod-spec-user-guide/sections/02-intro.adoc
+++ b/sources/mod-spec-user-guide/sections/02-intro.adoc
@@ -4,6 +4,8 @@
 
 This section describes and provides examples of the key concepts of the ModSpec.
 
+=== Requirement
+
 `requirement` is a fundamental concept. A requirement clearly states a condition (rule) to be satisfied in any implementation of the standard. 
 A requirement must be stated in “normative” language. In the OGC, the use of the word `SHALL` indicates that a requirement is being presented.
 Other standards organizations use the verb `MUST` to indicate a requirement is being stated. An example of a requirement is:
@@ -12,8 +14,15 @@ Other standards organizations use the verb `MUST` to indicate a requirement is b
 An implementation `SHALL` specify a coordinate reference system (CRS)
 ```
 
-The ModSpec further states that any requirement `SHALL` be uniquely identified and/or labeled. 
+Now, the above example is fairly nebulous and open to interpretation as to how the CRS is identified and expressed. Therefore, the ModSpec states that
+a requirement  `MAY` be stated as one or more `parts` where each part specified additional rules for that requirement. Expanding the above example:
 
+```
+An implementation `SHALL` specify a coordinate reference system (CRS). An EPSG code `SHALL` be used to indentify the CRS. 
+The CRS `SHALL` be referenced by a uniform resource identifier (i.e., a URI)  such as http://www.opengis.net/def/crs/EPSG/0/4326
+```
+
+The ModSpec further states that any requirement `SHALL` be uniquely identified and/or labeled. 
 
 
 image::../../images/2025_March_ModSpec_Diagram.png[ModSpec,640,480]
