--- a/sources/mod-spec-user-guide/sections/02-intro.adoc
+++ b/sources/mod-spec-user-guide/sections/02-intro.adoc
@@ -41,5 +41,23 @@ such as http://www.opengis.net/def/crs/EPSG/0/4326
 
 ==== Template for a requirement
 
+To ensure that all standards documents have the same look and feel, a standard (consistent) template should be used for stating requirements.
+The ModSpec does not specify any templates for how a requirement is specified - only the what the content is. In the OGC, requirements are specified 
+using an AsciiDoc template. This is because in the OGC, all standards documentation is done using GitHub capabilities. 
+The OGC has standardized on Metanorma for document publication. 
+
+The following AsciiDoc examples both work in the OGC publication process. The first is the `traditional` OGC AsciiDoc template and the second is formatted specifically for the Metanorma publication process.
+
+```
+[width="90%",cols="2,6"]
+|===
+^|*Requirement 1* | */req/core/crs* +
+^| A |An implementation SHALL specify a coordinate reference system (CRS).
+^| B | An EPSG code SHALL be used to indentify the CRS. 
+^| C | The CRS SHALL be referenced by a uniform resource identifier (i.e., a URI) such as http://www.opengis.net/def/crs/EPSG/0/4326
+|===
+```
+
+
 
 image::../../images/2025_March_ModSpec_Diagram.png[ModSpec,640,480]
