--- a/sources/mod-spec-user-guide/sections/02-intro.adoc
+++ b/sources/mod-spec-user-guide/sections/02-intro.adoc
@@ -8,7 +8,11 @@ This section describes and provides examples of the key concepts of the ModSpec.
 
 === Standardization goal
 
-Every new OGC Standards or revision to an OGC Standard must state a `standardization goal`.
+Every new OGC Standards or revision to an OGC Standard must state a `standardization goal`. This is a concise statement of the 
+problem that the standard addresses and the strategy envisioned for achieving a solution. Also termed a `problem statement`, the goal clarifies the issue to be addressed, 
+ensuring that everyone involved understands the problem, its significance, and why its important to solve.
+
+The goal of the is to define a simple conceptual model that can support any and all requirements for tiled data stores and applications including extensions for visualization, portrayal, analytics, filtering, levels of detail, and so forth.
 
 === OGC Identifiers
 
